Rework Gui drawing.